...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.DetailActivity"
    android:orientation="vertical"
    android:id="@+id/parent"
    >
    <!--<include layout="@layout/action_bar" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:transitionName="Expand">

...
        android:elevation="4dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#DCDCDC"
        >

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="match_parent"
...
