<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MainActivity"
    android:id="@+id/parent">
    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rvEntry"
        app:layout_constraintTop_toTopOf="@+id/rvEntry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEntry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/oops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/click_to_retry"
        android:textSize="25sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rvEntry"
        app:layout_constraintEnd_toEndOf="@+id/rvEntry"
        app:layout_constraintStart_toStartOf="@+id/rvEntry"
        app:layout_constraintTop_toTopOf="@+id/rvEntry" />

</androidx.constraintlayout.widget.ConstraintLayout>